--- a/sockets-and-carousel-client/src/index.css
+++ b/sockets-and-carousel-client/src/index.css
@@ -80,7 +80,7 @@ body {
   position: relative;
   display: flex;
   flex-direction: row;
-  gap: 8px;  
+  gap: 8px;
   height: 100%;
   overflow: hidden;
 }
@@ -101,4 +101,23 @@ body {
   padding: 16px 40px;
   border-bottom: 1px solid grey;
   background-color: white;
+}
+
+.home-chat-input-container {
+  position: absolute;
+  width: 100%;
+  height: 48px;
+  bottom: 0;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+}
+
+.user-message {
+  position: relative; 
+  padding: 8px 12px;
+  font-size: 14px;
+  width: 300px;
+  border-radius: 8px 8px 8px 0;
+  right: 0px;
 }
