--- a/sockets-and-carousel-client/src/index.css
+++ b/sockets-and-carousel-client/src/index.css
@@ -30,8 +30,10 @@ body {
   background-color: #f1f3f5;
   height: calc(100vh - var(--navbar-shift));
   width: 360px;
-  right: 0;
-  border: 2px solid blue;
+  right: 0;  
+  border-right: 2px solid #E2EAF1;
+  border-left: 2px solid #E2EAF1;
+  box-sizing: border-box;
 }
 
 .home-arrows-block {
@@ -69,8 +71,7 @@ body {
 .home-carousel-container {
   min-width: 500px;
   height: 100%;
-  position: relative;
-  border: 2px solid green;
+  position: relative;  
   margin-right: 360px;
   flex: 1;
   padding: 24px 8px;
@@ -99,18 +100,24 @@ body {
   font-size: 24px;
   z-index: 100;
   padding: 16px 40px;
-  border-bottom: 1px solid grey;
+  border-bottom: 2px solid #E2EAF1;
   background-color: white;
 }
 
-.home-chat-input-container {
-  position: absolute;
+.chat-input-container {
+  position: sticky;
   width: 100%;
   height: 48px;
   bottom: 0;
   background-color: white;
   display: flex;
   flex-direction: row;
+  z-index: 100;  
+}
+
+.chat-input-container input {
+  border: none;
+  outline: none;
 }
 
 .user-message {
@@ -118,6 +125,17 @@ body {
   padding: 8px 12px;
   font-size: 14px;
   width: 300px;
-  border-radius: 8px 8px 8px 0;
-  right: 0px;
+  border-radius: 8px 8px 8px 0;  
+}
+
+.user-message-container {
+  position: relative;
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: space-between;
+  gap: 8px;
+  height: calc(100% - 136px);
+  box-sizing: border-box;  
 }
