--- a/sockets-and-carousel-client/src/index.css
+++ b/sockets-and-carousel-client/src/index.css
@@ -104,6 +104,10 @@ body {
   background-color: white;
 }
 
+.navbar-container a:hover {
+  text-decoration: underline;
+}
+
 .chat-input-container {
   position: sticky;
   width: 100%;
@@ -113,11 +117,26 @@ body {
   display: flex;
   flex-direction: row;
   z-index: 100;
+  border-top: solid 2px #e2eaf1;
 }
 
 .chat-input-container input {
   border: none;
   outline: none;
+}
+
+.user-message-dashboard-outer-container {
+  position: relative;
+  height: calc(100% - 48px);
+  overflow-y: scroll;
+  scrollbar-width: thin;
+}
+
+.user-message-home-outer-container {
+  position: relative;
+  height: calc(100% - 106px);
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
 .user-message {
@@ -131,34 +150,28 @@ body {
 .user-message-container {
   position: relative;
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
+  justify-content: end;
   gap: 8px;
 }
 
 .user-message-container-home {
   align-items: end;
-  height: calc(100% - 136px);
   box-sizing: border-box;
   margin: 16px;
   margin-right: 4px;
-  overflow-y: scroll;
-  scrollbar-width: thin;
 }
 
 .user-message-container-dashboard {
   align-items: start;
-  height: calc(100% - 48px);
-  padding: 16px;
-  border-bottom: solid 2px #e2eaf1;
-  overflow-y: scroll;
-  scrollbar-width: thin;
+  box-sizing: border-box;
+  padding: 16px;  
 }
 
 .user-list {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 360px;
   height: 100%;
   border-right: solid 2px #e2eaf1;
@@ -170,7 +183,6 @@ body {
   flex-direction: row;
   height: 64px;
   gap: 8px;
-  background-color: white;
   border-bottom: 2px solid #e2eaf1;
 }
 
@@ -181,10 +193,10 @@ body {
 
 .placeholder-message {
   font-weight: 600;
+  font-size: 18px;
   margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
 }
